add reload endpoint
