# core/src/main/java/tech/pegasys/web3signer/core/service/http/OpenApiOperationsId.java
@@ -18,5 +18,7 @@ public enum OpenApiOperationsId {
   ETH1_SIGN,
   ETH2_LIST,
   ETH1_LIST,
+  ETH2_RELOAD,
+  ETH1_RELOAD,
   UPCHECK,
 }
