# core/src/main/resources/openapi/web3signer-eth1.yaml
@@ -78,6 +78,19 @@ paths:
         '500':
           description: 'Internal Web3Signer server error'
 
+  /api/v1/eth1/reload:
+    post:
+      tags:
+        - 'Reload Signer Keys'
+      summary: 'Reload signer keys'
+      description: 'Reload signer keys'
+      operationId: 'ETH1_RELOAD'
+      responses:
+        '200':
+          description: 'Reload successful'
+        '500':
+          description: 'Internal Web3Signer server error'
+
   /upcheck:
     get:
       tags:
